@@ -2,6 +2,7 @@
 v6.1.7-git
 ----------
 
+[mms] Cleaner handling of broken S/MIME signed messages.
 [mms] Fix displaying user-defined message headers when multiple-headers exist
       in a single message.
 [mjr] Honor recurrence-id range values when deleting recurring events (Bug
